# SpotInfo

./: .coverage  .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/SpotInfo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/application/: main.py
tests/: test_app.py
